infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        volumeMounts:
          - mountPath: /data/db
            name: mongo-claim
        # volumeMounts:
          # - mountPath: /Users/alberto/Desktop/data/db
          #   name: mo-data-pv
        image: mongo
        ports:
        - containerPort: 27017
      volumes:
        - name: mongo-claim
          persistentVolumeClaim:
            claimName: mongo-claim
      # volumes:
      # - name: mo-data-pv
      #   persistentVolumeClaim:
      #     claimName: mo-data-pvc
      # restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
