infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # kubernetes.io/ingress.global-static-ip-name: gke-albertogodar-static-ip
    networking.gke.io/managed-certificates: albertogodar-certificate
spec:
  rules:
    - host: albertogodar.com #voicemod.albertogodar.com
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: api-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 8000
